[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-client = "*"
solana-pubkey = "2.4.0"
solana-sdk = "2.3.1"
tokio = { version = "1.46.1", features = ["full"] }
all2all_controller = { version = "0.3.0", path = "../program" }

[lints]
workspace = true
