[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
all2all_controller = { version = "0.3.0", path = "../program" }
bincode = "1.3.3"
bs58 = "0.5.1"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-client = "*"
solana-pubkey = "2.4.0"
solana-sdk = "2.3.1"
tokio = { version = "1.46.1", features = ["full"] }

[lints]
workspace = true
