[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
gossip_weight_controller = { version = "0.3.0", path = "../program" }
bincode = "1.3.3"
bs58 = "0.5.1"
clap = { version = "4.5.41", features = ["derive"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-client = "2.2.0"
solana-instruction = "2.2.0"
solana-keypair = "2.2.0"
solana-signer = "2.2.0"
solana-signature = "2.2.0"
solana-transaction = "2.2.0"
solana-program = "2.2.0"
solana-pubkey = "2.2.0"
solana-system-interface = "1.0"
solana-account-info = "2.3.0"
solana-commitment-config = "2.2.0"
tokio = { version = "1.46.1", features = ["full"] }

[lints]
workspace = true
